PMD-based clean up